--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,5 +1,6 @@
 name: Auto Update README
 
+# Trigger: on push to Projects folder or scripts, or manually
 on:
   push:
     paths:
@@ -11,6 +12,8 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Fixes 403 on git push
 
     steps:
     - name: Checkout repository
@@ -22,8 +25,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
 
     - name: Generate project JSONs
       run: python generate_project_jsons.py
@@ -31,10 +33,4 @@ jobs:
     - name: Update README.md
       run: python generate_readme.py
 
-    - name: Commit and push changes
-      run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add README.md Projects/*.json
-        git diff --quiet && echo "No changes to commit" || git commit -m "Auto-update README and project JSONs"
-        git push
+    - name: Commit
