--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -2,7 +2,12 @@ name: Auto-Redact Secrets
 
 on:
   pull_request:
+    branches: # trigger on all branches
+      - '**'   # double asterisk matches all branches
     types: [opened, synchronize]
+  push:
+    branches: # trigger on all branches
+      - '**'   # double asterisk matches all branches
 
 permissions:
   contents: write
