--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,8 @@ name: Update README and Project JSONs
 
 on:
   push:
-    branches:
-      - main
+    branches: # trigger on all branches
+      - '**'   # double asterisk matches all branches
   workflow_dispatch: # allows manual trigger
 
 permissions:
