--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: # trigger on all branches
       - '**'   # double asterisk matches all branches
+  pull_request:
+    branches: # trigger on all branches
+      - '**'   # double asterisk matches all branches
   workflow_dispatch: # allows manual trigger
 
 permissions:
