--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -1,13 +1,13 @@
 name: Auto-Redact Secrets
 
 on:
-  pull_request:
-    branches: # trigger on all branches
-      - '**'   # double asterisk matches all branches
-    types: [opened, synchronize]
   push:
-    branches: # trigger on all branches
-      - '**'   # double asterisk matches all branches
+    branches:
+      - '**'   # Triggers on all branches
+  pull_request:
+    branches:
+      - '**'   # Triggers on PRs from any branch
+    types: [opened, synchronize]
 
 permissions:
   contents: write
@@ -18,39 +18,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout PR code
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
           fetch-depth: 0
 
       - name: Redact secrets (password, user, ssid)
         run: |
           echo "Running secret redaction..."
-          find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-
-            sed -i -E \
-              \
-              # Password redaction
-              -e 's/(password|pwd)[ ]*=[ ]*"[^"]*"/\1="pwd"/gi' \
-              -e "s/(password|pwd)[ ]*=[ ]*'[^']*'/\1='pwd'/gi" \
-              -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
-              \
-              # Username redaction
-              -e 's/(username|user|userid)[ ]*=[ ]*"[^"]*"/\1="userid"/gi' \
-              -e "s/(username|user|userid)[ ]*=[ ]*'[^']*'/\1='userid'/gi" \
-              -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
-              \
-              # SSID redaction
-              -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*"[^"]*"/\1="ssid"/gi' \
-              -e "s/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*'[^']*'/\1='ssid'/gi" \
-              -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
-              \
-              "$file"
-
-          done
+          # Target all files, especially Projects folder, skip .git
+          find . -type f -not -path "./.git/*" -exec sed -i -E \
+            -e 's/(password|pwd)[ ]*=[ ]*"[^"]*"/\1="pwd"/gi' \
+            -e "s/(password|pwd)[ ]*=[ ]*'[^']*'/\1='pwd'/gi" \
+            -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
+            -e 's/(username|user|userid)[ ]*=[ ]*"[^"]*"/\1="userid"/gi' \
+            -e "s/(username|user|userid)[ ]*=[ ]*'[^']*'/\1='userid'/gi" \
+            -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
+            -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*"[^"]*"/\1="ssid"/gi' \
+            -e "s/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*'[^']*'/\1='ssid'/gi" \
+            -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
+            {} +
 
       - name: Commit & Push sanitized changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -62,4 +53,3 @@ jobs:
             git push
           else
             echo "No sensitive content found."
-          fi
