Update secret redaction workflow for better clarity

--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -1,7 +1,12 @@
 name: Auto-Redact Secrets
 
 on:
+  push:
+    branches:
+      - '**'   # Triggers on all branches
   pull_request:
+    branches:
+      - '**'   # Triggers on PRs from any branch
     types: [opened, synchronize]
 
 permissions:
@@ -13,39 +18,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout PR code
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
           fetch-depth: 0
 
       - name: Redact secrets (password, user, ssid)
         run: |
           echo "Running secret redaction..."
+          # Find all files except .git
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-
             sed -i -E \
-              \
               # Password redaction
-              -e 's/(password|pwd)[ ]*=[ ]*"[^"]*"/\1="pwd"/gi' \
-              -e "s/(password|pwd)[ ]*=[ ]*'[^']*'/\1='pwd'/gi" \
+              -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="pwd"/g' \
               -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
-              \
               # Username redaction
-              -e 's/(username|user|userid)[ ]*=[ ]*"[^"]*"/\1="userid"/gi' \
-              -e "s/(username|user|userid)[ ]*=[ ]*'[^']*'/\1='userid'/gi" \
+              -e 's/([Uu]sername|user|userid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="userid"/g' \
               -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
-              \
               # SSID redaction
-              -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*"[^"]*"/\1="ssid"/gi' \
-              -e "s/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*'[^']*'/\1='ssid'/gi" \
+              -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="ssid"/g' \
               -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
-              \
               "$file"
-
           done
 
       - name: Commit & Push sanitized changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -57,4 +55,3 @@ jobs:
             git push
           else
             echo "No sensitive content found."
-          fi
