Refine secret redaction process in workflow
Updated the secret redaction workflow to only scan text files and improved regex patterns for better matching.

--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -3,10 +3,8 @@ name: Auto-Redact Secrets
 on:
   push:
     branches:
-      - '**'   # Triggers on all branches
+      - '**'        # All branches
   pull_request:
-    branches:
-      - '**'   # Triggers on PRs from any branch
     types: [opened, synchronize]
 
 permissions:
@@ -26,22 +24,21 @@ jobs:
       - name: Redact secrets (password, user, ssid)
         run: |
           echo "Running secret redaction..."
-          # Target all files, especially Projects folder, skip .git
-          find . -type f -not -path "./.git/*" -exec sed -i -E \
-            -e 's/(password|pwd)[ ]*=[ ]*"[^"]*"/\1="pwd"/gi' \
-            -e "s/(password|pwd)[ ]*=[ ]*'[^']*'/\1='pwd'/gi" \
-            -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
-            -e 's/(username|user|userid)[ ]*=[ ]*"[^"]*"/\1="userid"/gi' \
-            -e "s/(username|user|userid)[ ]*=[ ]*'[^']*'/\1='userid'/gi" \
-            -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
-            -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*"[^"]*"/\1="ssid"/gi' \
-            -e "s/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*'[^']*'/\1='ssid'/gi" \
-            -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
-            {} +
+          # Only scan text/code files to avoid binary issues
+          find . -type f \( -name "*.py" -o -name "*.json" -o -name "*.txt" -o -name "*.md" \) -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
+            [ -w "$file" ] || continue   # Skip non-writable files
+
+            sed -i -E \
+              -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="pwd"/g' \
+              -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
+              -e 's/([Uu]ser(name)?|userid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="userid"/g' \
+              -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
+              -e 's/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="ssid"/g' \
+              -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
+              "$file"
+          done
 
       - name: Commit & Push sanitized changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -50,6 +47,8 @@ jobs:
             echo "Sanitized changes detected — committing..."
             git add -A
             git commit -m "Auto-redact secrets (password/userid/ssid)"
-            git push
+            # Push to the PR branch (works on all branches)
+            git push origin HEAD:${GITHUB_HEAD_REF:-$(git rev-parse --abbrev-ref HEAD)}
           else
             echo "No sensitive content found."
+          fi
