--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -3,11 +3,10 @@ name: Auto-Redact Secrets
 on:
   push:
     branches:
-      - '**'   # Triggers on all branches
+      - '**'        # All branches
   pull_request:
     branches:
-      - '**'   # Triggers on PRs from any branch
-    types: [opened, synchronize]
+      - '**'        # All branches in PRs
 
 permissions:
   contents: write
@@ -23,27 +22,24 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Redact secrets (password, user, ssid)
+      - name: Redact secrets (password, ssid)
         run: |
           echo "Running secret redaction..."
-          # Find all files except .git
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-            sed -i -E \
-              # Password redaction
-              -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="pwd"/g' \
-              -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
-              # Username redaction
-              -e 's/([Uu]sername|user|userid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="userid"/g' \
-              -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
-              # SSID redaction
-              -e 's/(ssid|SSID|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="ssid"/g' \
-              -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
-              "$file"
+
+            # Only process text-based files
+            if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
+
+              # Replace password/pwd values
+              sed -i -E \
+                -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="pwd"/g' \
+                -e 's/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="ssid"/g' \
+                "$file"
+
+            fi
           done
 
       - name: Commit & Push sanitized changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -51,7 +47,7 @@ jobs:
           if ! git diff --quiet; then
             echo "Sanitized changes detected — committing..."
             git add -A
-            git commit -m "Auto-redact secrets (password/userid/ssid)"
+            git commit -m "Auto-redact secrets (password/ssid)"
             git push
           else
             echo "No sensitive content found."
