--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -3,10 +3,10 @@ name: Auto-Redact Secrets
 on:
   push:
     branches:
-      - '**'        # All branches
+      - '**'
   pull_request:
     branches:
-      - '**'        # All branches in PRs
+      - '**'
 
 permissions:
   contents: write
@@ -21,33 +21,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.head_ref }}   # ensures the branch can be pushed
 
       - name: Redact secrets (password, ssid)
         run: |
           echo "Running secret redaction..."
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
 
-            # Only process text-based files
             if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
-
-              # Replace password/pwd values
               sed -i -E \
                 -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="pwd"/g' \
                 -e 's/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="ssid"/g' \
                 "$file"
-
             fi
           done
 
+      - name: Setup git for committing
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git checkout -B "${GITHUB_REF#refs/heads/}"  # ensures we are on the branch
+
       - name: Commit & Push sanitized changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
           if ! git diff --quiet; then
             echo "Sanitized changes detected — committing..."
             git add -A
             git commit -m "Auto-redact secrets (password/ssid)"
-            git push
+            git push origin HEAD
           else
             echo "No sensitive content found."
