Fix formatting and ensure branch checkout in workflow

--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -21,13 +21,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.head_ref }}   # ensures the branch can be pushed
+          ref: ${{ github.head_ref }}
 
       - name: Redact secrets (password, ssid)
         run: |
           echo "Running secret redaction..."
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-
             if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
               sed -i -E \
                 -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="pwd"/g' \
@@ -40,7 +39,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -B "${GITHUB_REF#refs/heads/}"  # ensures we are on the branch
+          git checkout -B "${GITHUB_REF#refs/heads/}"
 
       - name: Commit & Push sanitized changes
         run: |
