--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -29,8 +29,8 @@ jobs:
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
             if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
               sed -i -E \
-                -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="pwd"/g' \
-                -e 's/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"']?[^"'"'"'\ ]+["'"'"']?/\1="ssid"/g' \
+                -e "s/([Pp]assword|pwd)[ ]*=[ ]*['\"]?[^'\" ]+['\"]?/\1=\"pwd\"/g" \
+                -e "s/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*['\"]?[^'\" ]+['\"]?/\1=\"ssid\"/g" \
                 "$file"
             fi
           done
