Refactor secret redaction in workflow
Updated the secret redaction logic to handle constants and improved regex patterns.

--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -26,27 +26,9 @@ jobs:
       - name: Redact secrets (password, ssid)
         run: |
           echo "Running secret redaction..."
+
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
             if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
               sed -i -E \
-                -e "s/([Pp]assword|pwd)[ ]*=[ ]*['\"]?[^'\" ]+['\"]?/\1=\"pwd\"/g" \
-                -e "s/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*['\"]?[^'\" ]+['\"]?/\1=\"ssid\"/g" \
-                "$file"
-            fi
-          done
-
-      - name: Setup git for committing
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -B "${GITHUB_REF#refs/heads/}"
-
-      - name: Commit & Push sanitized changes
-        run: |
-          if ! git diff --quiet; then
-            echo "Sanitized changes detected — committing..."
-            git add -A
-            git commit -m "Auto-redact secrets (password/ssid)"
-            git push origin HEAD
-          else
-            echo "No sensitive content found."
+                -e "s/(const[[:space:]]+\**[[:space:]]*([Pp]assword|pwd)[[:space:]]*=[[:space:]]*)\"[^\"]+\"/\1\"***\"/g" \
+                -e "s/(const[[:space:]]+\
