--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -3,9 +3,10 @@ name: Auto-Redact Secrets
 on:
   push:
     branches:
-      - '**'        # All branches
+      - '**'
   pull_request:
-    types: [opened, synchronize]
+    branches:
+      - '**'
 
 permissions:
   contents: write
@@ -20,35 +21,35 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
-      - name: Redact secrets (password, user, ssid)
+      - name: Redact secrets (password, ssid)
         run: |
           echo "Running secret redaction..."
-          # Only scan text/code files to avoid binary issues
-          find . -type f \( -name "*.py" -o -name "*.json" -o -name "*.txt" -o -name "*.md" \) -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-            [ -w "$file" ] || continue   # Skip non-writable files
 
-            sed -i -E \
-              -e 's/([Pp]assword|pwd)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="pwd"/g' \
-              -e 's/("password"[ ]*:[ ]*")[^"]*"/\1pwd"/gi' \
-              -e 's/([Uu]ser(name)?|userid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="userid"/g' \
-              -e 's/("username"[ ]*:[ ]*")[^"]*"/\1userid"/gi' \
-              -e 's/([Ss]sid|wifi_ssid|network_ssid)[ ]*=[ ]*["'"'"'][^"'"'"']*["'"'"']/\1="ssid"/g' \
-              -e 's/("ssid"[ ]*:[ ]*")[^"]*"/\1ssid"/gi' \
-              "$file"
+          find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
+            if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
+              sed -i -E \
+                -e 's/(const[[:space:]]+\**[[:space:]]*([Pp]assword|pwd)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' \
+                -e 's/(const[[:space:]]+\**[[:space:]]*([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' \
+                -e 's/([Pp]assword|pwd)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' \
+                -e 's/([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' \
+                "$file"
+            fi
           done
+
+      - name: Setup git for committing
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git checkout -B "${GITHUB_REF#refs/heads/}"
 
       - name: Commit & Push sanitized changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
           if ! git diff --quiet; then
             echo "Sanitized changes detected — committing..."
             git add -A
-            git commit -m "Auto-redact secrets (password/userid/ssid)"
-            # Push to the PR branch (works on all branches)
-            git push origin HEAD:${GITHUB_HEAD_REF:-$(git rev-parse --abbrev-ref HEAD)}
+            git commit -m "Auto-redact secrets (password/ssid)"
+            git push origin HEAD
           else
             echo "No sensitive content found."
-          fi
