--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Redact secrets (password, ssid)
         run: |
+          set -e
           echo "Running secret redaction..."
 
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
@@ -38,12 +39,14 @@ jobs:
 
       - name: Setup git for committing
         run: |
+          set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git checkout -B "${GITHUB_REF#refs/heads/}"
 
       - name: Commit & Push sanitized changes
         run: |
+          set -e
           if ! git diff --quiet; then
             echo "Sanitized changes detected — committing..."
             git add -A
@@ -51,3 +54,4 @@ jobs:
             git push origin HEAD
           else
             echo "No sensitive content found."
+          fi
