--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -22,13 +22,15 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
+          clean: true
 
-      - name: Redact secrets (password, ssid)
+      - name: FORCE sanitize secrets (overwrite even on conflicts)
         run: |
           set -e
-          echo "Running secret redaction..."
+          echo "Force-sanitizing secrets..."
 
           find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
+            # Process all text-like files — EVEN if they contain conflict markers
             if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
               sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Pp]assword|pwd)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
               sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
@@ -44,14 +46,9 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git checkout -B "${GITHUB_REF#refs/heads/}"
 
-      - name: Commit & Push sanitized changes
+      - name: Force-Commit & Push sanitized changes
         run: |
           set -e
-          if ! git diff --quiet; then
-            echo "Sanitized changes detected — committing..."
-            git add -A
-            git commit -m "Auto-redact secrets (password/ssid)"
-            git push origin HEAD
-          else
-            echo "No sensitive content found."
-          fi
+          git add -A
+          git commit -m "Force-sanitized secrets (password/ssid)" || echo "Nothing to commit"
+          git push origin HEAD
