feat: password hidding will work on new or modified files only

--- a/.github/workflows/redact-secrets.yml
+++ b/.github/workflows/redact-secrets.yml
@@ -17,38 +17,53 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          ref: ${{ github.head_ref }}
-          clean: true
+          fetch-depth: 0  # Fetch full history to compare commits
+          ref: ${{ github.head_ref }}  # Ensure the correct ref is checked out
+          clean: true  # Ensure the repo is clean before making changes
 
+      # Force sanitize secrets in modified/new files only
       - name: FORCE sanitize secrets (overwrite even on conflicts)
         run: |
           set -e
           echo "Force-sanitizing secrets..."
 
-          find . -type f -not -path "./.git/*" -print0 | while IFS= read -r -d '' file; do
-            # Process all text-like files — EVEN if they contain conflict markers
-            if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
-              sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Pp]assword|pwd)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
-              sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
-              sed -i -E 's/([Pp]assword|pwd)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' "$file"
-              sed -i -E 's/([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' "$file"
-            fi
-          done
+          # Get a list of modified or newly added files in the current commit
+          files_to_sanitize=$(git diff --name-only --diff-filter=AM ${{ github.sha }}^ ${{ github.sha }})
 
+          # If there are files to sanitize, process them
+          if [ -n "$files_to_sanitize" ]; then
+            for file in $files_to_sanitize; do
+              # Only process text-like files (even if they contain conflict markers)
+              if file "$file" | grep -qE 'text|JSON|Python|script|markup'; then
+                echo "Sanitizing file: $file"
+                
+                # Redact sensitive data (passwords and ssid)
+                sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Pp]assword|pwd)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
+                sed -i -E 's/(const[[:space:]]+\**[[:space:]]*([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*)".*"/\1"***"/g' "$file"
+                sed -i -E 's/([Pp]assword|pwd)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' "$file"
+                sed -i -E 's/([Ss]sid|wifi_ssid|network_ssid)[[:space:]]*=[[:space:]]*".*"/\1="***"/g' "$file"
+              fi
+            done
+          else
+            echo "No files to sanitize."
+          fi
+
+      # Setup git for committing sanitized changes
       - name: Setup git for committing
         run: |
           set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -B "${GITHUB_REF#refs/heads/}"
+          git checkout -B "${GITHUB_REF#refs/heads/}"  # Ensure we're on the correct branch
 
+      # Force commit and push the sanitized changes
       - name: Force-Commit & Push sanitized changes
         run: |
           set -e
-          git add -A
+          git add -A  # Add all modified files to the staging area
           git commit -m "Force-sanitized secrets (password/ssid)" || echo "Nothing to commit"
-          git push origin HEAD
+          git push origin HEAD  # Push the changes to the same branch
